Alignment fix for privacy gaurd card

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
@@ -141,7 +141,7 @@
 		font-size: $fontsize_xs;
 		color: $grey_dark;
 		// max-width: 60rem;
-		padding-left: 2rem;
+		padding-left: 3rem;
 		padding-right: 2rem;
 	}
 
